force-app/main/default/objects/Krow__Vendor_Expense_Item__c/Krow__Vendor_Expense_Item__c.object-meta.xml
<CustomObject>
    <label>Vendor Expense Item</label>
    <nameField>
        <displayFormat>VEI-{0000}</displayFormat>
        <label>Vendor Expense Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>