force-app/main/default/objects/Krow__Vendor_Expense_Item__c/fields/Krow__Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Item</label>
    <referenceTo>Krow__Expense_Line__c</referenceTo>
    <relationshipLabel>Vendor Expense Items</relationshipLabel>
    <relationshipName>Vendor_Expense_Items</relationshipName>
    <type>Lookup</type>
</CustomField>