force-app/main/default/objects/Krow__Vendor_Expense_Item__c/fields/Krow__Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>Krow__Reimbursable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reimbursable?</label>
    <type>Checkbox</type>
</CustomField>