force-app/main/default/objects/Krow__Vendor_Expense_Item__c/fields/Krow__Vendor_Payment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor_Payment__c</fullName>
    <label>Vendor Payment</label>
    <referenceTo>Krow__Vendor_Payment__c</referenceTo>
    <relationshipLabel>Vendor Expense Items</relationshipLabel>
    <relationshipName>Vendor_Expense_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>